Issue6_implementation_plan
